fix spacing on link components

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -797,13 +797,13 @@ a.hash-link {
   }
 }
 
-/* @media screen and (min-width: 996px) {
+@media screen and (min-width: 996px) {
   .row.is-multiline .col {
     margin-top: var(--ifm-spacing-horizontal) !important;
     margin-bottom: var(--ifm-spacing-horizontal) !important;
   }
 }
- */
+
 .has-hover-pointer:hover {
   cursor: pointer;
 }
